[GTK][WPE] Fix some build errors in service workers code https://bugs.webkit.org/show_bug.cgi?id=182966

Reviewed by Žan Doberšek.

Source/WebCore:

No new tests: no change in behavior.

* workers/service/ServiceWorkerProvider.h: add missing forward declaration.

Source/WebKit:

* CMakeLists.txt: add missing files.
* StorageProcess/ServiceWorker/WebSWServerConnection.cpp: add missing includes.
* UIProcess/ServiceWorkerProcessProxy.cpp: use #include rather than #import in C++; add missing ifdef.
* UIProcess/ServiceWorkerProcessProxy.h: add missing ifdef.
* WebProcess/Storage/WebSWClientConnection.cpp: add missing includes.
* WebProcess/Storage/WebSWContextManagerConnection.cpp: add missing includes.
(WebKit::WebSWContextManagerConnection::WebSWContextManagerConnection):
  call the function that exists outside cocoa.


Canonical link: https://commits.webkit.org/198784@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@228915 268f45cc-cd09-0410-ab3c-d52691b4dbfc