Source/WebKit/WebProcess/Storage/WebSWClientConnection.cpp
@@ -44,6 +44,7 @@
 #include <WebCore/ServiceWorkerFetchResult.h>
 #include <WebCore/ServiceWorkerJobData.h>
 #include <WebCore/ServiceWorkerRegistrationData.h>
+#include <WebCore/ServiceWorkerRegistrationKey.h>
 
 using namespace PAL;
 using namespace WebCore;
